Fix folder structure and sidebar pushing homescreen
Fixed the folder structure, placing icons in their own respective folder.
Also, adjusted the layout so sidebar would cover the page content instead
of pushing it to the center

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,9 @@ html{
   font-size: 62.5%;
 }
 body{
-  min-height:100%;
+  display: flex;
+  flex-direction: column;
+  min-height:100vh;
   margin:0;
   padding:0;
 }
